fix(client/app): incorrect page bouncing on iOS devices

--- a/client/tagentic-client-vue/src/style.css
+++ b/client/tagentic-client-vue/src/style.css
@@ -66,6 +66,7 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
+  overscroll-behavior: none;
 }
 
 .root-app {
